--- a/styleLogin.css
+++ b/styleLogin.css
@@ -22,7 +22,8 @@ body {
   background: #fff;
   border-radius: 30px;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
-  /* overflow: hidden; */
+  overflow: hidden;
+  margin: 20px;
 }
 
 .form-box {
@@ -37,10 +38,19 @@ body {
   text-align: center;
   padding: 40px;
   z-index: 1;
+  transition: .6s ease-in-out 1.2s, visibility 0s 1s;
 }
 
-.form-box.register{
-    visibility: hidden;
+.container.active .form-box{
+  right: 50%;
+}
+
+.form-box.register {
+  visibility: hidden;
+}
+
+.container.active .form-box.register{
+  visibility: visible;
 }
 
 form {
@@ -111,6 +121,11 @@ form {
   margin: 10px;
 }
 
+.social-icons{
+  display: flex;
+  justify-content: center;
+}
+
 .social-icons a {
   display: inline-flex;
   padding: 10px;
@@ -122,51 +137,137 @@ form {
   margin: 0 8px;
 }
 
-.toggle-box{
-    position: absolute;
+.toggle-box {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.toggle-box::before {
+  content: "";
+  position: absolute;
+  left: -250%;
+  width: 300%;
+  height: 100%;
+  background: #7494ec;
+  border-radius: 150px;
+  z-index: 2;
+  transition: 1.8s ease-in-out;
+}
+
+.container.active .toggle-box::before{
+  left: 50%;
+}
+
+
+.toggle-pannel {
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  /* background: seagreen; */
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  transition: .6s ease-in-out;
+}
+
+.toggle-pannel.toggle-left{
+  left: 0;
+  transition-delay: 1.2s;
+}
+
+.container.active .toggle-pannel.toggle-left{
+  left: -50%;
+  transition-delay: .6s;
+}
+
+.toggle-pannel.toggle-right {
+  right: -50%;
+  transition-delay: .6s;
+}
+
+.container.active .toggle-pannel.toggle-right{
+  right: 0;
+  transition-delay: 1.2s;
+
+}
+
+.toggle-pannel p {
+  margin-bottom: 20px;
+}
+
+.toggle-pannel .btn {
+  width: 160px;
+  height: 46px;
+  background: transparent;
+  border: 2px solid #fff;
+  box-shadow: none;
+}
+
+@media  screen and (max-width:650px) {
+  .container{
+    height: calc(100vh - 40px);
+  }
+
+
+  .form-box {
+    bottom: 0;
     width: 100%;
-    height: 100%;
-}
+    height: 70%;
+  }
 
-.toggle-box::before{
-    content: '';
-    position: absolute;
-    left: -250%;
-    width: 300%;
-    height: 100%;
-    background: #7494ec;
-    border-radius: 150px;
-    z-index: 2;
-}
+  .container.active .form-box{
+    right: 0;
+    bottom: 30%;
+  }
 
-.toggle-pannel{
-    position: absolute;
-    width: 50%;
-    height: 100%;
-    background: seagreen;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 2;
+  .toggle-box::before{
+    left: 0;
+    top: -270%;
+    width: 100%;
+    height: 300%;
+    border-radius: 20vw;
+  }
+  .container.active .toggle-box::before{
+    left: 0;
+    top: 70%;
+  }
 
-}
+  .toggle-pannel{
+    width: 100%;
+    height: 30%;
+  }
+
+  .toggle-pannel.toggle-left{
+    top: 0;
+  }
+
+  .container.active .toggle-pannel.toggle-left{
+    left: 0;
+    top: -30%;
+  }
 
 .toggle-pannel.toggle-right{
-    right: -50%;
-}
+    right: 0;
+    bottom: -30%;
+  }
 
-.toggle-pannel p{
-    margin-bottom: 20px;
-}
+  .container.active .toggle-pannel.toggle-right{
+    bottom: 0;
+  }
 
-.toggle-pannel .btn{
-    width: 160px;
-    height: 46px;
-    background: transparent;
-    border: 2px solid #fff;
-    box-shadow: none;
 }
 
 
+@media  screen and (max-width:400px) {
+  .form-box {
+    padding: 20px;
+  }
+
+  .toggle-pannel h1{
+    font-size: 30px;
+  }
+}
